# filetag

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/filetag/: __init__.py  cli.py  core.py
tests/: test_core.py
