[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filetag"
version = "0.1.0"
description = "CLI tool for tagging files using filesystem extended attributes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["cli", "file-tagging", "xattr", "extended-attributes", "organization"]
authors = [
    {name = "EdgarOrtegaRamirez", email = "edgar@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "click>=8.1.0,<9.0.0",
    "xattr>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<7.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.0,<2.0",
    "build>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/filetag"
Repository = "https://github.com/EdgarOrtegaRamirez/filetag"
Documentation = "https://github.com/EdgarOrtegaRamirez/filetag#readme"
Issues = "https://github.com/EdgarOrtegaRamirez/filetag/issues"

[project.scripts]
filetag = "filetag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -p no:cacheprovider"
markers = [
    "xattr: tests that require filesystem xattr support",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["filetag"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false